--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+   /* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none;  /* IE and Edge */
+		scrollbar-width: none;  /* Firefox */
+   }
+}
 @layer base {
 	:root {
 		/* 0 0% 100% */
@@ -83,5 +94,8 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+	}
+	td {
+		padding: 1rem 0.25rem !important;
 	}
 }
