fix:details table delete & add: dashboard-ui

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@
 		--background: 222, 47%, 11%;
 		--foreground: 210 40% 98%;
 
-		--card: 222.2 84% 4.9%;
+		/* --card: 222.2 84% 4.9%; */
+		--card: 244.1,44.9%,19.2%;
 		--card-foreground: 210 40% 98%;
 
 		--popover: 222.2 84% 4.9%;
