--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
+/* @layer utilities {
+	
+
 	.no-scrollbar::-webkit-scrollbar {
-		display: none;
+		width: 7px;
 	}
-   /* Hide scrollbar for IE, Edge and Firefox */
+
+	.no-scrollbar::-webkit-scrollbar-thumb {
+		border-radius: 5px;
+		background-color: #b0b0b0;
+	}
+
+	.no-scrollbar::-webkit-scrollbar-thumb:hover {
+		background-color: #909090; 
+	}
+} */
+@layer utilities {
+	.no-scrollbar::-webkit-scrollbar:horizontal {
+		display: none;
+		scrollbar-width: none;
+	}
+	/* Hide scrollbar for IE, Edge and Firefox */
 	.no-scrollbar {
-		-ms-overflow-style: none;  /* IE and Edge */
-		scrollbar-width: none;  /* Firefox */
-   }
+		overflow-x: hidden;
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 }
+/* 
+.no-scrollbar {
+		overflow-x: hidden;
+		-ms-overflow-style: none;
+	}
+
+*/
 @layer base {
 	:root {
 		/* 0 0% 100% */
@@ -25,8 +50,9 @@
 
 		--popover: 0 0% 100%;
 		--popover-foreground: 222.2 84% 4.9%;
-        /* primary change 221.2 83.2% 53.3%*/
-		--primary: 207, 15%, 47%; 
+		/* primary change 221.2 83.2% 53.3%*/
+		/* --primary: 206.5,89.6%,45.1%; */
+		--primary: 207, 15%, 47%;
 		--primary-foreground: 210 40% 98%;
 
 		--secondary: 210 40% 96.1%;
@@ -46,23 +72,30 @@
 
 		--border: 214.3 31.8% 91.4%;
 		--input: 214.3 31.8% 91.4%;
-        /* ring change */
+		/* ring change */
 		--ring: 221.2 83.2% 53.3%;
 		--radius: 0.5rem;
+		--chart-1: 173 58% 39%;
+    	--chart-2: 12 76% 61%;
+    	--chart-3: 197 37% 24%;
+    	--chart-4: 43 74% 66%;
+    	--chart-5: 27 87% 67%;
 	}
 
 	.dark {
 		/* --background: 222.2 84% 4.9%; */
+		/* --background: 215,20%,15%; */
 		--background: 222, 47%, 11%;
 		--foreground: 210 40% 98%;
 
 		/* --card: 222.2 84% 4.9%; */
-		--card: 244.1,44.9%,19.2%;
+		/* --card: 215,20%,15%; */
+		--card: 244.1, 44.9%, 19.2%;
 		--card-foreground: 210 40% 98%;
 
 		--popover: 222.2 84% 4.9%;
 		--popover-foreground: 210 40% 98%;
-        /* primary change */
+		/* primary change */
 		--primary: 217.2 91.2% 59.8%;
 		--primary-foreground: 222.2 47.4% 11.2%;
 
@@ -74,7 +107,7 @@
 
 		--muted: 217.2 32.6% 17.5%;
 		--muted-foreground: 215 20.2% 65.1%;
-        /* accent foreground change */
+		/* accent foreground change */
 		--accent: 217.2 32.6% 17.5%;
 		--accent-foreground: 210 40% 98%;
 
@@ -83,23 +116,52 @@
 
 		--border: 217.2 32.6% 17.5%;
 		--input: 217.2 32.6% 17.5%;
-        /* ring change */
+		/* ring change */
 		--ring: 224.3 76.3% 48%;
+		--chart-1: 220 70% 50%;
+    	--chart-5: 160 60% 45%;
+    	--chart-3: 30 80% 55%;
+    	--chart-4: 280 65% 60%;
+    	--chart-2: 340 75% 55%;
 	}
 }
 
 @layer base {
 	* {
 		@apply border-border;
-		 font-family: "Poppins", sans-serif !important;
+		font-family: "Poppins", sans-serif !important;
 	}
 	body {
 		@apply bg-background text-foreground;
 	}
-	td {
+	/* td {
 		padding: 1rem 0.25rem !important;
-	}
+	} */
 	.edit {
 		padding: 0 !important;
+	}
+}
+.myinput-width {
+	width: calc(100% + 1rem) !important;
+}
+.tektablepopupformitem {
+	grid-template-columns: 150px 1fr;
+}
+/* .tektable {
+	position: relative !important;
+}
+.tektableheader {
+	position: fixed !important;
+	top: 0 !important;
+	z-index: 25 !important;
+} */
+table {
+	/* box-shadow and borders will not work with positon: sticky otherwise */
+	border-collapse: separate !important;
+	border-spacing: 0;
+}
+@media screen and (max-width: 800px) {
+	.tektablepopupformitem {
+		grid-template-columns: 120px 1fr;
 	}
 }
